first php project

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </head>
 
     <body>
-        <btn-wrapper class="ms-auto p-4">
+        <div class="ms-auto p-4">
             <a class="btn px-5 me-3 btn-primary" href="login.html">Login</a>
             <a class="btn px-5 btn-outline-primary" href="register.html">Sign up</a>
-        </btn-wrapper>
+        </div>
         <main>
             <h2 class="text-danger"> Internship</h2>
             <h5>Problem Statement :</h5>
